[package]
name = "todoist-habit-tracker"
version = "1.0.0"
authors = ["arnaud <a.taelman@jellysmack.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7.1"
curl = "0.4.30"
dotenv = "0.15.0"
log = "0.4.11"
